k8s/eureka-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: eureka-server

  template:
    metadata:
      labels:
        app: eureka-server

    spec:
      containers:
      - name: eureka-server
        image: corejavapractice-eureka-server:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8761
