k8s/otp-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otp-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otp-service
  template:
    metadata:
      labels:
        app: otp-service
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: otp-service
          image: corejavapractice-otp-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8096
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
