k8s/product-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: product-service
          image: corejavapractice-product-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8094
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
