k8s/openai.yml
apiVersion: v1
kind: Service
metadata:
  name: openai
spec:
  type: ClusterIP
  selector:
    app: openai
  ports:
    - port: 8102
      targetPort: 8102
