k8s/otp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: otp-service
spec:
  type: ClusterIP
  selector:
    app: otp-service
  ports:
    - port: 8096
      targetPort: 8096
