k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bps-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: www.bps.com
    http:
      paths:

      - path: /otp
        pathType: Prefix
        backend:
          service:
            name: otp-service
            port:
              number: 8096

      - path: /eureka
        pathType: Prefix
        backend:
          service:
            name: eureka-server
            port:
              number: 8761

      - path: /api-gateway
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
